--- a/public/html/article-list.html
+++ b/public/html/article-list.html
@@ -30,7 +30,7 @@
         <div class="col-md-12 profile-rightSide">
         <ul role="tablist" class="nav nav-tabs">
             <li class="active" role="presentation"><a aria-expanded="true" aria-controls="home" data-toggle="tab" role="tab" id="new-tab" target="_self">最新博文</a></li>
-            <li role="presentation" class=""><a aria-controls="profile" data-toggle="tab" id="hot-tab"  role="tab" aria-expanded="false" target="_self">最热博文</a></li>
+            <li role="presentation" class=""><a a aria-controls="interviewtab" data-toggle="tab" id="interview-tab"  role="tab" href="#interviewtab" aria-expanded="false" target="_self">悦动达人</a></li>
 
         </ul>
         <div class="tab-content">
@@ -73,13 +73,39 @@
 
                     </li>
                 </ul>
-
+                <div gen-pagination="pagination" id="articlepage"></div>
             </div>
-            <div aria-labelledby="hot-tab" id="profile" class="tab-pane fade" role="tabpanel">
+            <div aria-labelledby="interview-tab" id="interviewtab" class="tab-pane fade" role="tabpanel">
+                <ul class="media-list">
+                    <li ng-repeat="topic in topiclist">
+                        <div >
+                            <table class="table table-bordered table-hover">
+                                <tbody>
+                                <tr>
+                                    <td align="center" class="col-md-4">ID:{{topic.article_id}}</td>
+                                    <td class="col-md-6">
+                                        <div class="col-md-12"><a ng-href="{{'#/articledetail/'+topic.article_id}}"> {{topic.cover_text|articletitle}}</a> <font color="gray">(  评论数:{{topic.comments_count}}  赞: {{article.thumbs_count}} )</font></div>
+                                    </td>
+                                    <td class="col-md-2">
+                                        <div>
+                                            <a ng-href="{{'#/detail/'+topic.author.userid}}">{{topic.author.nickname}}</a>
+                                        </div>
+                                        <div class="time-show">
+                                            {{topic.time|timeconvert}}
+                                        </div>
+                                    </td>
+                                </tr>
+                                </tbody>
+                            </table>
+                        </div>
+
+                    </li>
+                </ul>
+                <div gen-pagination="topicpagination" id="topiclistpage"></div>
 
             </div>
         </div>
-        <div gen-pagination="pagination"></div>
+
     </div>
     </div>
 </div>
