--- a/public/index.html
+++ b/public/index.html
@@ -46,7 +46,7 @@
     	    <!-- Collect the nav links, forms, and other content for toggling -->
     	    <div id="global-navbar" class="collapse navbar-collapse" ng-if="isLogin">
     	    	<ul class="nav navbar-nav">
-                    <li ng-repeat="item in navBarItems"><a ng-href="{{'#/'+$index}}">{{item}}</a></li>
+                    <li ng-repeat="item in navBarItems"><a ng-href="{{'#/'+$index}}">{{item.title}}<p id="newitemtext" ng-if="item.shownew">&nbspnew</p></a></li>
                     <li><a href="../sport_phone/index.html">手机版任务管理</a></li>
     			</ul>
                 <div class="navbar-text logOFF">
