--- a/public/html/cover-setting.html
+++ b/public/html/cover-setting.html
@@ -1,139 +1,197 @@
 <div class="main-bg" ng-controller="coverController">
-    <div class="row"><h2 class="col-md-12">封面推荐设置</h2></div>
-    <div class="row">
-        <div class="col-md-6">
-            <table id="topictable">
-                <tr>
-                    <td >
-                        访谈文章ID:
-                    </td>
-                    <td>
-                        <input type="text" size=50 ng-model="interviewid" ng-init="">
-                    </td>
-                </tr>
-                <tr>
-                    <td >
-                        封面图片:
-                    </td>
-                    <td>
-                        <input type="file"  name="fileToUpload" id="fileToUpload" />
-                        <p style="color: #ff0000" ng-if="updateError">( *上传失败，请重新上传)</p>
-                    </td>
-                </tr>
-                <tr>
-                    <td colspan="2">
-                        <img ng-src="{{fileUrl}}" class="img-small" ng-if="fileUrl.length>0">
-                    </td>
-                </tr>
-                <tr>
-                    <td >
-                        精华文章ID:
-                    </td>
-                    <td>
-                        <input type="text" size=50 ng-model="articleid" ng-init="">
-                    </td>
-                </tr>
-                <tr>
-                    <td colspan="2">
-                        <div align="right" >
-                            <button type="button" class="btn btn-primary" ng-click="uploadFile()" ng-disabled="interviewid.length==0">上传</button>
-                        </div>
-                    </td>
-                </tr>
-            </table>
-        </div>
-        <div class="col-md-6">
-            <div class="dashboard-rightSide">
-                <div class="">
-                    <ul role="tablist" class="nav nav-tabs" id="coverTab">
-                        <li class="active" role="presentation"><a aria-expanded="true" aria-controls="interview" data-toggle="tab" role="tab" id="interview-tab"  href="#interview" target="_self">访谈文章</a></li>
-                        <li role="presentation" class=""><a aria-controls="articletab" data-toggle="tab" id="article-tab"  role="tab" href="#articletab" aria-expanded="false" target="_self">精华博文</a></li>
+    <div class="row"><h2 class="col-md-12">封面推荐</h2></div>
 
-                    </ul>
-                    <div class="tab-content" id="dashboardTabContent">
-                        <div aria-labelledby="interview-tab" id="interview" class="tab-pane fade active in" role="tabpanel">
-                            <div class="table-responsive" ng-if="interviewlist.length>0">
-                                <table class="table table-bordered table-hover">
-                                    <thead>
-                                    <tr>
-                                        <th>访谈ID</th>
-                                        <th>访谈标题</th>
-                                    </tr>
-                                    </thead>
-                                    <tbody>
-                                    <tr ng-repeat="interview in interviewlist">
-                                        <td ng-click="selectinterview(interview.article_id)">{{interview.article_id}}</td>
-                                        <td><a ng-href="{{'#/articledetail/'+interview.article_id}}" target="_blank">{{interview.cover_text|articletitle}}</a></td>
-                                    </tr>
 
-                                    </tbody>
-                                </table>
-                                <div gen-pagination="pagination" id="interviewpage"></div>
+    <div class="dashboard-rightSide">
+        <div class="">
+            <ul role="tablist" class="nav nav-tabs" id="covertTab">
+                <li class="active" role="presentation"><a aria-expanded="true" aria-controls="settab" data-toggle="tab" role="tab" id="set-tab"  href="#settab" target="_self">封面推荐设置</a></li>
+                <li role="presentation" class=""><a aria-controls="historytab" data-toggle="tab" id="history-tab"  role="tab" href="#historytab" aria-expanded="false" target="_self">历史封面推荐</a></li>
+
+            </ul>
+            <div class="tab-content" id="convertTabContent">
+                <div aria-labelledby="interview-tab" id="settab" class="tab-pane fade active in" role="tabpanel">
+                    <div class="row">
+                        <div class="col-md-12">
+                            <div class="row below-title">
+                                <div class="col-md-12 btn-row">
+                                    <button type="button" class="btn btn-primary" ng-click="preview()">预览</button>
+                                    <button type="button" class="btn btn-primary" ng-click="uploadFile()" ng-disabled="interviewid.length==0">提交</button>
+                                </div>
                             </div>
-                            <p ng-if="interviewlist.length==0">&nbsp&nbsp&nbsp&nbsp暂无访谈文章</p>
+                            <div class="row below-title">
+                                <div class="col-md-12">
+                                    <table>
+                                        <tbody>
+                                        <tr>
+                                            <td  colspan="3">
+                                                封面图片:
+                                            </td>
+
+                                        </tr>
+                                        <tr>
+                                            <td>
+                                                <input type="file"  name="fileToUpload" id="fileToUpload" />
+
+                                            </td>
+                                            <td>
+                                                <p style="color: #ff0000" ng-if="updateError">(上传失败，请重新上传)</p>
+                                            </td>
+
+                                            <td>
+                                                <button type="button" class="btn btn-primary" ng-click="uploadimg()">上传图片</button>
+                                            </td>
+                                        </tr>
+                                        <tr>
+                                            <td colspan="3">
+                                                <img ng-src="{{fileUrl}}" class="img-small" ng-if="fileUrl.length>0">
+                                            </td>
+                                        </tr>
+                                        </tbody>
+                                    </table>
+                                </div>
+                            </div>
                         </div>
-                        <div aria-labelledby="article-tab" id="articletab" class="tab-pane fade" role="tabpanel">
-                            <div class="table-responsive" ng-if="articlelist.length>0">
-                                <table class="table table-bordered table-hover">
-                                    <thead>
-                                    <tr>
-                                        <th>推荐博文ID</th>
-                                        <th>推荐博文标题</th>
-                                    </tr>
-                                    </thead>
-                                    <tbody>
-                                    <tr ng-repeat="article in articlelist">
-                                        <td ng-click="selectaritcle(article.article_id)">{{article.article_id}}</td>
-                                        <td><a ng-href="{{'#/articledetail/'+article.article_id}}" target="_blank">{{article.cover_text|articletitle}}</a></td>
-                                    </tr>
-                                    </tbody>
-                                </table>
-                                <div gen-pagination="articlepagination" id="articlepage"></div>
+                        <div class="col-md-4">
+                            <table class="topictable">
+                                <tr>
+                                    <td >
+                                        选择访谈文章:
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>
+                                        <input type="text" size=50 ng-model="interviewid" ng-init="">
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>
+                                        <div class="table-responsive" ng-if="interviewlist.length>0">
+                                            <table class="table table-bordered table-hover">
+                                                <thead>
+                                                <tr>
+                                                    <th>访谈ID</th>
+                                                    <th>访谈标题</th>
+                                                </tr>
+                                                </thead>
+                                                <tbody>
+                                                <tr ng-repeat="interview in interviewlist">
+                                                    <td ng-click="selectinterview(interview.article_id)">{{interview.article_id}}</td>
+                                                    <td><a ng-href="{{'#/articledetail/'+interview.article_id}}" target="_blank">{{interview.cover_text|articletitle}}</a></td>
+                                                </tr>
+
+                                                </tbody>
+                                            </table>
+                                            <div gen-pagination="pagination" id="interviewpage"></div>
+                                        </div>
+                                        <p ng-if="interviewlist.length==0">&nbsp&nbsp&nbsp&nbsp暂无访谈文章</p>
+                                    </td>
+                                </tr>
+                            </table>
+                        </div>
+                        <div class="col-md-4">
+                            <table class="topictable">
+                                <tr>
+                                    <td >
+                                        选择精华文章:
+                                    </td>
+
+                                </tr>
+                                <tr>
+                                    <td>
+                                        <input type="text" size=50 ng-model="articleid" ng-init="">
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>
+                                        <div class="table-responsive" ng-if="articlelist.length>0">
+                                            <table class="table table-bordered table-hover">
+                                                <thead>
+                                                <tr>
+                                                    <th>推荐博文ID</th>
+                                                    <th>推荐博文标题</th>
+                                                </tr>
+                                                </thead>
+                                                <tbody>
+                                                <tr ng-repeat="article in articlelist">
+                                                    <td ng-click="selectaritcle(article.article_id)">{{article.article_id}}</td>
+                                                    <td><a ng-href="{{'#/articledetail/'+article.article_id}}" target="_blank">{{article.cover_text|articletitle}}</a></td>
+                                                </tr>
+                                                </tbody>
+                                            </table>
+                                            <div gen-pagination="articlepagination" id="articlepage"></div>
+                                        </div>
+                                        <p ng-if="articlelist.length==0">&nbsp&nbsp&nbsp&nbsp暂无推荐博文</p>
+                                    </td>
+                                </tr>
+                            </table>
+                        </div>
+                        <div class="col-md-4" id="preview">
+                            预览
+                            <div>
+                            <p id="previewtitle">悦动达人</p>
+                            <table>
+                                <tr>
+                                    <td>
+                                        <div>
+                                            <a ng-href="{{'#/articledetail/'+previewinfo.interview_id}}">{{previewinfo.title}}</a>
+
+                                        </div>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>
+                                        <a ng-href="{{'#/articledetail/'+previewinfo.article_id}}" target="_blank" data-toggle="tooltip" ng-if="previewinfo.cover_image.length>0"><img ng-src="{{previewinfo.cover_image}}" class="img-preview"></a>
+                                    </td>
+                                </tr>
+                            </table>
                             </div>
-                            <p ng-if="articlelist.length==0">&nbsp&nbsp&nbsp&nbsp暂无推荐博文</p>
                         </div>
                     </div>
-                </div>
 
+                </div>
+                <div aria-labelledby="article-tab" id="historytab" class="tab-pane fade" role="tabpanel">
+                    <div class="table-responsive" ng-if="coversettinglist.length>0">
+                        <table class="table table-bordered table-hover">
+                            <thead>
+                            <tr>
+                                <th>访谈标题</th>
+                                <th>访谈ID</th>
+                                <th>访谈内容</th>
+                                <th>封面图片</th>
+                                <th>推荐作者ID</th>
+                                <th>精华文章ID</th>
+                                <th>操作</th>
+                            </tr>
+                            </thead>
+                            <tbody>
+                            <tr ng-repeat="cover in coversettinglist">
+                                <td>{{cover.cover_text}}</td>
+                                <td><a ng-href="{{'#/articledetail/'+cover.article_id}}">{{cover.article_id}}</a></td>
+                                <td><a ng-href="{{'#/articledetail/'+cover.article_id}}">{{cover.contents|articletitle}}</a></td>
+                                <td>
+                                    <div align="center">
+                                        <a ng-href="{{cover.cover_image}}" target="_blank" data-toggle="tooltip" ng-if="cover.cover_image.length>0"><img ng-src="{{cover.cover_image}}" class="img-small"></a>
+                                        <p ng-if="cover.cover_image.length==0">未设置封面图片</p>
+                                    </div>
+                                </td>
+                                <td><a ng-href="{{'#/detail/'+cover.refer}}" target="_blank">{{cover.refer}}</a></td>
+                                <td><a ng-href="{{'#/articledetail/'+cover.refer_article}}">{{cover.refer_article}}</a></td>
+                                <td><button type="button" class="btn btn-primary" ng-click="delete($index)">删除</button>
+                                    <button type="button" class="btn btn-primary" ng-click="previewhistory($index)" ng-if="false">预览</button></td>
+                            </tr>
+                            </tbody>
+                        </table>
+                        <div gen-pagination="topiclistpagination" id="topiclistpage"></div>
+                    </div>
+                    <p ng-if="coversettinglist.length==0">&nbsp&nbsp&nbsp&nbsp暂未设置推荐</p>
+                </div>
             </div>
         </div>
-    </div>
-    <div class="row"><p class="col-md-12">历史封面推荐</p></div>
-    <div class="row">
-        <div class="table-responsive" ng-if="coversettinglist.length>0">
 
-            <table class="table table-bordered table-hover">
-                <thead>
-                <tr>
-                    <th>访谈标题</th>
-                    <th>访谈ID</th>
-                    <th>访谈内容</th>
-                    <th>封面图片</th>
-                    <th>推荐作者ID</th>
-                    <th>精华文章ID</th>
-                    <th>操作</th>
-                </tr>
-                </thead>
-                <tbody>
-                <tr ng-repeat="cover in coversettinglist">
-                    <td>{{cover.cover_text}}</td>
-                    <td><a ng-href="{{'#/articledetail/'+cover.article_id}}">{{cover.article_id}}</a></td>
-                    <td><a ng-href="{{'#/articledetail/'+cover.article_id}}">{{cover.contents|articletitle}}</a></td>
-                    <td>
-                        <div align="center">
-                            <a ng-href="{{cover.cover_image}}" target="_blank" data-toggle="tooltip" ng-if="cover.cover_image.length>0"><img ng-src="{{cover.cover_image}}" class="img-small"></a>
-                            <p ng-if="cover.cover_image.length==0">未设置封面图片</p>
-                        </div>
-                    </td>
-                    <td><a ng-href="{{'#/detail/'+cover.refer}}" target="_blank">{{cover.refer}}</a></td>
-                    <td><a ng-href="{{'#/articledetail/'+cover.refer_article}}">{{cover.refer_article}}</a></td>
-                    <td><button type="button" class="btn btn-primary" ng-click="delete($index)">删除</button></td>
-                </tr>
-                </tbody>
-            </table>
-            <div gen-pagination="topiclistpagination" id="topiclistpage"></div>
-        </div>
-        <p ng-if="coversettinglist.length==0">&nbsp&nbsp&nbsp&nbsp暂未设置推荐</p>
+    </div>
+
+
     </div>
     </div>
 </div>
