--- a/public/html/task-list.html
+++ b/public/html/task-list.html
@@ -15,7 +15,7 @@
             <li ng-class="{true: 'active', false: 'inactive'}[checked]" role="presentation"><a aria-expanded="true" aria-controls="onchecktask" data-toggle="tab" role="tab" id="onchecktask-tab"  href="#3">待审批</a></li>
             <li role="presentation" ng-class="{false: 'active', true: 'inactive'}[checked]"><a aria-controls="checkedtask" data-toggle="tab" id="checkedtask-tab"  role="tab" href="#tasklisthistory" aria-expanded="false">已审批</a></li>
         </ul>
-        <table st-table="displayedCollection" st-safe-src="rowCollection" class="table table-striped">
+        <table st-table="displayedCollection" st-safe-src="rowCollection" class="table table-striped" ng-if="displayedCollection.length>0">
             <thead>
             <tr>
                 <th st-sort="source">source</th>
