--- a/public/html/cover-setting.html
+++ b/public/html/cover-setting.html
@@ -134,7 +134,7 @@
                                 <tr>
                                     <td>
                                         <div>
-                                            <a ng-href="{{'#/articledetail/'+previewinfo.interview_id}}">{{previewinfo.title}}</a>
+                                            <a ng-href="{{'#/articledetail/'+previewinfo.interview_id}}">{{previewinfo.title|previewinfofilter}}</a>
 
                                         </div>
                                     </td>
