--- a/public/html/article-list.html
+++ b/public/html/article-list.html
@@ -56,7 +56,7 @@
                                     <td>
                                         <div>
                                             <label class="checkbox-inline">
-                                                <input type="radio" ng-click="article($index)" name="{{$index}}" ng-checked="article.type==0">普通博文
+                                                <input type="radio" ng-click="articlecheck($index)" name="{{$index}}" ng-checked="article.type==0">普通博文
                                             </label>
                                             <label class="checkbox-inline">
                                                 <input type="radio" ng-click="interview($index)" name="{{$index}}" ng-checked="article.type==1">访谈
